2007-09-05  Martin Lambers <marlam@marlam.de>

	* Fix a bad bug in cvl_reduce() that produced wrong results.

2007-09-04  Martin Lambers <marlam@marlam.de>

	* Fix minor documentation flaw.
	* Export cvl_math functions.

2007-08-31  Martin Lambers <marlam@marlam.de>

	* Version 0.2.0: Complete rewrite. OpenGL is now used to delegate the
	processing tasks to the GPU. Floating point data is supported.